
Publication Date 7.x-2.x, xxxx-xx-xx
------------------------------------------
#2499731 by dtamajon, jstoller: Undefined index: #default_value in
  date_popup_process_time_part().
#2643568 by jstoller: Test error: Only variables should be passed by reference

Publication Date 7.x-2.2, 2015-03-06
------------------------------------------
#2414509 by jstoller: Remove mention of Scheduler integration from README.txt.
#2414645 by jstoller: Fix published on field doesn't display for non-admin users.
#2390939 by jstoller: Fix validation error introduced in #2210853.
#2387551 by jstoller: Add permission to modify any published on date.
#2210853 by jstoller: Add support for jQuery date picker when Date Popup module
  is enabled.
#2379503 by jstoller: Reset the publication date when a node is cloned using the
  Node Clone module.
#2378797 by ramsalt: Add views argument handlers.

Publication Date 7.x-2.1, 2014-11-11
------------------------------------------
#2332253 by jgalletta, finne: Add Entity API entity wrapper support.
#1970822 by soulston, Nodz, jostler: Add Display Suite integration.
#2355633 by muschpusch: Remove obsolete code in hook_node_load.
#2344527 by jstoller: Remove inapropriate files array declarations.
#2157049 by jstoller: When granting access to the Published On field, don't
  grant access to any other collateral fields.

Publication Date 7.x-2.0, 2014-06-07
------------------------------------------
#2157049 by balsama, markie, jstoller: Add permission to modify Published On date.
#2157043 by balsama: Move "Published on" field from Author vertical tab to
  Options vertical tab.
#2094395 by jstoller: Implement hook_publication_date_alter(), so other modules
  can alter the publication date.
#2094375 by jstoller: Remember original publication date when node is
  unpublished.
#2088895 by jstoller: Honor custom publication date on node creation.
#969318 by dgtlmoon, tobyontour, wickwood, sime, markie, math0ne: UI to edit the