@@ -4,6 +4,8 @@ Publication Date 7.x-2.x, xxxx-xx-xx
 #2499731 by dtamajon, jstoller: Undefined index: #default_value in
   date_popup_process_time_part().
 #2643568 by jstoller: Test error: Only variables should be passed by reference
+#2532576 by jstoller: Fix sorting on publication date so unpublished content
+  appears newer
 
 Publication Date 7.x-2.2, 2015-03-06
 ------------------------------------------
